at subscription level is done

--- a/Movies.Client/appsettings.Development.json
+++ b/Movies.Client/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "IDP_EndPoint": "https://localhost:5005"
+  "IDP_EndPoint": "https://localhost:5005",
+  "API_EndPoint": "https://localhost:5001"
 }
