refresh token is done

--- a/Movies.Client/appsettings.Development.json
+++ b/Movies.Client/appsettings.Development.json
@@ -7,5 +7,7 @@
     }
   },
   "IDP_EndPoint": "https://localhost:5005",
-  "API_EndPoint": "https://localhost:5001"
+  "API_EndPoint": "https://localhost:5001",
+  "ClientId": "movies_mvc_client",
+  "ClientSecret": "secret"
 }
